//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  refreshTokenHash String
  password String [not null]
  firstName String
  lastName String
  ownedJobs Job [not null]
  jobs JobsUser [not null]
  role Role [not null]
}

Table Job {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  description String
  users JobsUser [not null]
  owner User
  ownerId String
}

Table JobsUser {
  user User [not null]
  userId String [not null]
  job Job [not null]
  jobId String [not null]
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (userId, jobId) [pk]
  }
}

Enum Role {
  ADMIN
  USER
}

Ref: Job.ownerId > User.id [delete: Cascade]

Ref: JobsUser.userId > User.id [delete: Cascade]

Ref: JobsUser.jobId > Job.id [delete: Cascade]